add svcs section, button, etc

--- a/index.html
+++ b/index.html
@@ -2,14 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Start Boostrap</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
+    <title>Start Bootstrap</title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300i" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
 </nav>
+
+<header>
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-lead-in">Welcome To My Site!</div>
+      <div class="intro-heading">It's Nice To Meet You</div>
+      <button class="btn btn-primary">Tell Me More</button>
+    </div>
+  </div>
+</header>
+
+<section id="services">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">E-Commerce</div>
+      <div class="col-md-4">Responsive Design</div>
+      <div class="col-md-4">Web Security</div>
+    </div>
+  </div>
+
+</section>
 
 </body>
 </html>
