--- a/index.html
+++ b/index.html
@@ -3,33 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <title>Start Bootstrap</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300i" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Start Bootstrap</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
 
 <header>
-  <div class="container">
-    <div class="intro-text">
-      <div class="intro-lead-in">Welcome To My Site!</div>
-      <div class="intro-heading">It's Nice To Meet You</div>
-      <button class="btn btn-primary">Tell Me More</button>
+    <div class="container">
+        <div class="intro-text">
+            <div class="intro-lead-in">Welcome To My Site!</div>
+            <div class="intro-heading">It's Nice To Meet You</div>
+            <button class="btn btn-primary">Tell Me More</button>
+        </div>
     </div>
-  </div>
 </header>
 
 <section id="services">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">E-Commerce</div>
-      <div class="col-md-4">Responsive Design</div>
-      <div class="col-md-4">Web Security</div>
+    <div class="container">
+        <div class="row1 text-center">
+            <div class="col-md-12"></div>
+            <h1>Services</h1>
+            <p>Lorem Ipsum dolor site amet consectetur</p>
+
+        </div>
+
+        <div class="row text-center">
+            <div class="col-md-4"><span class="fa-stack fa-4x">
+  <i class="fa fa-circle fa-stack-2x"></i>
+  <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+</span>
+                <h4>E-Commerce</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                    architecto quo inventore harum ex magni, dicta impedit.</p></div>
+
+            <div class="col-md-4"><span class="fa-stack fa-4x">
+  <i class="fa fa-circle fa-stack-2x"></i>
+  <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+</span>
+                <h4>Responsive Design</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                    architecto quo inventore harum ex magni, dicta impedit.</p></div>
+
+            <div class="col-md-4"><span class="fa-stack fa-4x">
+  <i class="fa fa-circle fa-stack-2x"></i>
+  <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+</span>
+                <h4>Web Security</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                    architecto quo inventore harum ex magni, dicta impedit.</p></div>
+
+        </div>
     </div>
-  </div>
 
 </section>
 
